--- a/KCHC.Android/KCHC.Android.csproj
+++ b/KCHC.Android/KCHC.Android.csproj
@@ -123,5 +123,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Kinimatorama.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bandcamp.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\spotify.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\youtube.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
