--- a/KCHC.Android/KCHC.Android.csproj
+++ b/KCHC.Android/KCHC.Android.csproj
@@ -155,5 +155,13 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Stenahoria.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Agxoneytoi.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\raw\emo.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
